--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,12 @@
         "issues": "http://github.com/innmind/async-operating-system/issues"
     },
     "require": {
-        "php": "~8.1"
+        "php": "~8.1",
+        "innmind/mantle": "dev-develop",
+        "innmind/async-time-warp": "dev-develop",
+        "innmind/async-stream": "dev-develop",
+        "innmind/async-socket": "dev-develop",
+        "innmind/operating-system": "^3.5"
     },
     "autoload": {
         "psr-4": {
