--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
-        "vimeo/psalm": "~4.30",
+        "vimeo/psalm": "~5.6",
         "innmind/black-box": "~4.10",
-        "innmind/coding-standard": "~2.0"
+        "innmind/coding-standard": "~2.0",
+        "ext-random": "*"
     }
 }
