Revert "temporarily disable linux tests"
This reverts commit 1cca52bbf382744cfdd4e563e411145032e442a7.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest]
+        os: [ubuntu-latest, macOS-latest]
         php-version: ['8.1', '8.2']
         dependencies: ['lowest', 'highest']
     name: 'PHPUnit'
