--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     },
     "require": {
         "php": "~8.1",
-        "innmind/mantle": "dev-develop",
-        "innmind/async-time-warp": "dev-develop",
-        "innmind/async-stream": "dev-develop",
-        "innmind/async-socket": "dev-develop",
+        "innmind/mantle": "~1.0",
+        "innmind/async-time-warp": "~1.0",
+        "innmind/async-stream": "~1.0",
+        "innmind/async-socket": "~1.0",
         "innmind/operating-system": "^3.5"
     },
     "autoload": {
